--- a/index.html
+++ b/index.html
@@ -149,16 +149,18 @@
                             <div class="card-body0">
                                 <h5 class="card-title0">1.Working Directory</h5>
                                 <div class="line mx-auto"></div>
-                                <p class="card-text0">The working directory is simply, your current directory that you are working on.</p>
+                                <p class="card-text0">The working directory is simply, your current directory in your system 
+                                  that you are working on.</p>
                             </div>
                         </div>
                         <div class="card">
                             <img src="picture/undraw_to_do_list_a49b.svg" class="card-img-top" alt="SA"> 
                             <div class="card-body0">
-                                <h5 class="card-title0">2.Index & Commit</h5>
-                                <div class="line mx-auto"></div>
-                                <p class="card-text0">Staging area is a section where new files(a.k.a. untracked-files) that are going to be a part of the next commit is held, 
-                                  which lets git know what changes in the file are going to occur for the next commit.</p>
+                                <h5 class="card-title0">2.Staging area</h5>
+                                <div class="line mx-auto"></div> new files(a.k.a. untracked-files)
+                                <p class="card-text0">Staging area is act as a bridge between your working directory & local repository,
+                                  In staging area new files(a.k.a. untracked-files) are added so that these new files further add-up to local repository through commit.
+                                </p>
                             </div>
                        </div>
                         <div class="card">
@@ -166,7 +168,8 @@
                             <div class="card-body0">
                                 <h5 class="card-title0">3.Local Repository</h5>
                                 <div class="line mx-auto"></div>
-                                <p class="card-text0">Local repository is your working directory in your local machine or personal computer. where you make changes locally and that is tracked by the git.</p>
+                                <p class="card-text0">Local repository is your working directory in your local machine or personal computer. 
+                                  where you make changes locally and that is tracked by the git.</p>
                             </div>
                         </div>
                         <div class="card">
@@ -174,7 +177,8 @@
                             <div class="card-body0">
                                 <h5 class="card-title0">4.Remote Repository</h5>
                                 <div class="line mx-auto"></div>
-                                <p class="card-text0">A remote repository, is a Git repository hosted on the Internet or some other network.
+                                <p class="card-text0">A remote repository is a git repository hosted on the Internet or some other network,
+                                  it is a common repository that all team members use to exchange their changes in source-code development.
                                 It is just cloud storage.</p>
                             </div>
                         </div>
@@ -198,7 +202,7 @@
               <div class="card-body3">
                 <h5 class="card-title3">Initialize</h5>
                 <div class="line"></div>
-                <p class="card-text3">Initialize operation is used to create a git repository.
+                <p class="card-text3">Initialize operation is used to initialize or to create a git repository.
                 </p>
               </div>
             </div>
@@ -214,7 +218,7 @@
                 <h5 class="card-title3">Add</h5>
                 <div class="line"></div>
                 <p class="card-text3">This operation adds a change in the working directory to the staging area. 
-                  Basically, it tells to git that you have to include the updates to a particular file for the next commit.
+                  Basically, it tells git that you have to include the updates to a particular file for the next commit.
                 </p>
               </div>
             </div>
@@ -262,6 +266,7 @@
                 <h5 class="card-title3">Push</h5>
                 <div class="line"></div>
                 <p class="card-text3">This operation is used to upload local repository content to a remote repository.
+                  It is opposite of pull Operation.
                 </p>
               </div>
             </div>
@@ -313,7 +318,6 @@
                 <p class="card-text3">This is also a way of combining the work between different branches. 
                   Rebasing takes a set of commits, copies them and stores them outside your repository.
                   The advantage of rebasing is that it can be used to make linear sequence of commits. 
-                  The commit log or history of the repository stays clean if rebasing is done.
                 </p>
               </div>
             </div>
