--- a/index.html
+++ b/index.html
@@ -44,15 +44,14 @@
           <div class="card3 mb-3" style="max-width: 980px; margin-left: 2rem;">
             <div class="row no-gutters">
               <div class="col-md-4">
-                <img src="picture/undraw_web_search_eetr.svg" class="card-img" alt="...">
+                <img src="picture/undraw_web_search_eetr.svg" class="card-img" alt="SRC">
               </div>
               <div class="col-md-8">
                 <div class="card-body3">
                   <h5 class="card-title3">You Searched</h5>
                   <div class="line"></div>
-                  <p class="card-text3">Suppose, You googled something very important topic reagrding your work. 
-                                        And you came across a perfect set of content, 
-                                        But mistakenly you have'nt saved it at that point time and moved on for other task.</p>
+                  <p class="card-text3">Suppose, You googled something very important topic regarding your work. And you came across a perfect set of content, 
+                    But mistakenly you haven't saved it at that point time and moved on to another task.</p>
                 </div>
               </div>
             </div>
@@ -60,13 +59,13 @@
           <div class="card3 mb-3" style="max-width: 980px; margin-left: 2rem;">
             <div class="row no-gutters">
               <div class="col-md-4">
-                <img src="picture/undraw_searching_p5ux.svg" class="card-img" alt="...">
+                <img src="picture/undraw_searching_p5ux.svg" class="card-img" alt="QST">
               </div>
               <div class="col-md-8">
                 <div class="card-body3">
                   <h5 class="card-title3">You Forgot</h5>
                   <div class="line"></div>
-                  <p class="card-text3">After a while you are trying to rember what that content was that you have find?
+                  <p class="card-text3">After a while you are trying to remember what that content was that you have found?                      
                     But now you forgot it completely.</p>
                 </div>
               </div>
@@ -75,14 +74,14 @@
           <div class="card33 mb-3" style="max-width: 980px; margin-left: 2rem;">
             <div class="row no-gutters">
               <div class="col-md-4">
-                <img src="picture/undraw_task_31wc.svg" class="card-img" alt="...">
+                <img src="picture/undraw_task_31wc.svg" class="card-img" alt="HT">
               </div>
               <div class="col-md-8">
                 <div class="card-body3">
                   <h5 class="card-title3">Hit the browser history</h5>
                   <div class="line"></div>
                   <p class="card-text3">Fortunately, every browser has a feature of browsing history. 
-                    So, having that in mind you hit the browser history section to find out the piece of content.</p>
+                    So, having that in mind as you hit the browser history section to find out the piece of content.</p>
                 </div>
               </div>
             </div>
@@ -90,14 +89,14 @@
           <div class="card33 mb-3" style="max-width: 980px; margin-left: 2rem;">
             <div class="row no-gutters">
               <div class="col-md-4">
-                <img src="picture/undraw_select_option_y75i.svg" class="card-img" alt="...">
+                <img src="picture/undraw_select_option_y75i.svg" class="card-img" alt="OPT">
               </div>
               <div class="col-md-8">
                 <div class="card-body3">
                   <h5 class="card-title3">Choose the option</h5>
                   <div class="line"></div>
                   <p class="card-text3">Browser history shows you all the searches and activities that you have done till that point of time. 
-                    Now from that plathora of options you have to filter out the right option that you want to go with.
+                    Now from that plethora of options you have to filter out the right option that you want to go with. 
                   </p>
                 </div>
               </div>
@@ -106,7 +105,7 @@
           <div class="card33 mb-3" style="max-width: 980px; margin-left: 2rem;">
             <div class="row no-gutters">
               <div class="col-md-4">
-                <img src="picture/undraw_done_a34v.svg" class="card-img" alt="...">
+                <img src="picture/undraw_done_a34v.svg" class="card-img" alt="GTI">
               </div>
               <div class="col-md-8">
                 <div class="card-body3">
@@ -120,14 +119,15 @@
           <div class="card33 mb-3" style="max-width: 980px; margin-left: 2rem;">
             <div class="row no-gutters">
               <div class="col-md-4">
-                <img src="picture/undraw_completed_ngx6.svg" class="card-img" alt="...">
+                <img src="picture/undraw_completed_ngx6.svg" class="card-img" alt="CNL">
               </div>
               <div class="col-md-8">
                 <div class="card-body3">
                   <h5 class="card-title3">Conclusion!</h5>
                   <div class="line"></div>
-                  <p class="card-text3">Just like browser history, Git tracks your source code what changes have you done so far
-                    ,it is sought of a source code history feature. You can find it any changes whether it is big or small.</p>
+                  <p class="card-text3">In simple language we can say that just like browser history, Git tracks your source code what changes have you done so far, it is kind of a source code history feature. You can find it any changes, whether it is big or small
+                    And you can go back and forth to any changes that you have stored in git.
+                  </p>
                 </div>
               </div>
             </div>
@@ -149,7 +149,7 @@
                             <div class="card-body0">
                                 <h5 class="card-title0">1.Working Directory</h5>
                                 <div class="line mx-auto"></div>
-                                <p class="card-text0">The working directory is simply, your current directory in your system 
+                                <p class="card-text0">The working directory is simple, your current directory on your system                                    
                                   that you are working on.</p>
                             </div>
                         </div>
@@ -157,9 +157,9 @@
                             <img src="picture/undraw_to_do_list_a49b.svg" class="card-img-top" alt="SA"> 
                             <div class="card-body0">
                                 <h5 class="card-title0">2.Staging area</h5>
-                                <div class="line mx-auto"></div> new files(a.k.a. untracked-files)
-                                <p class="card-text0">Staging area is act as a bridge between your working directory & local repository,
-                                  In staging area new files(a.k.a. untracked-files) are added so that these new files further add-up to local repository through commit.
+                                <div class="line mx-auto"></div>
+                                <p class="card-text0">The staging area is acting as a bridge between your working directory & local repository,                                   
+                                  In staging area new files (a.k.a. untracked-files) are added so that these new files further add-up to local repository through commit.
                                 </p>
                             </div>
                        </div>
@@ -168,8 +168,8 @@
                             <div class="card-body0">
                                 <h5 class="card-title0">3.Local Repository</h5>
                                 <div class="line mx-auto"></div>
-                                <p class="card-text0">Local repository is your working directory in your local machine or personal computer. 
-                                  where you make changes locally and that is tracked by the git.</p>
+                                <p class="card-text0">Local repository is your working directory in your local machine or personal computer.                                    
+                                  Where you make changes locally and that is tracked by the git.</p>
                             </div>
                         </div>
                         <div class="card">
@@ -177,9 +177,9 @@
                             <div class="card-body0">
                                 <h5 class="card-title0">4.Remote Repository</h5>
                                 <div class="line mx-auto"></div>
-                                <p class="card-text0">A remote repository is a git repository hosted on the Internet or some other network,
-                                  it is a common repository that all team members use to exchange their changes in source-code development.
-                                It is just cloud storage.</p>
+                                <p class="card-text0">A remote repository is a git repository hosted on the Internet or some other network,                                   
+                                  it is a common repository that all team members use to exchange their changes in the source-code development.
+                                  It is just cloud storage.</p>
                             </div>
                         </div>
                     </div>
@@ -217,7 +217,7 @@
               <div class="card-body3">
                 <h5 class="card-title3">Add</h5>
                 <div class="line"></div>
-                <p class="card-text3">This operation adds a change in the working directory to the staging area. 
+                <p class="card-text3">This operation adds a change in the working directory to the staging area.                    
                   Basically, it tells git that you have to include the updates to a particular file for the next commit.
                 </p>
               </div>
@@ -233,8 +233,8 @@
               <div class="card-body3">
                 <h5 class="card-title3">Commit</h5>
                 <div class="line"></div>
-                <p class="card-text3">This operation captures the snapshot of the working directory. So, that it can compare the 
-                  changes in future commits. 
+                <p class="card-text3">This operation captures the snapshot of the working directory. 
+                  So, that it can compare the changes in future commits (Master branch is always headed to last commit). 
                 </p>
               </div>
             </div>
@@ -281,9 +281,9 @@
               <div class="card-body3">
                 <h5 class="card-title3">Branch</h5>
                 <div class="line"></div>
-                <p class="card-text3">This operation creates branch for independent line of development. 
+                <p class="card-text3">This operation creates a branch for independent line of development.
                   You can think of them as a way to request a brand new working directory, staging area, 
-                  and project history for parellel contribution and development (Default branch in git is master branch).</p>
+                  And project history for parallels contribution and development (Default branch in git is master branch).</p>
                 </p>
               </div>
             </div>
@@ -300,7 +300,7 @@
                 <h5 class="card-title3">Merge</h5>
                 <div class="line"></div>
                 <p class="card-text3">This operation lets you take the independent lines of development 
-                  created by git branch and integrate them into a single branch i.e to master branch.
+                  created by git branch and integrate them into a single branch i.e. to master branch.
                 </p>
               </div>
             </div>
@@ -317,7 +317,7 @@
                 <div class="line"></div>
                 <p class="card-text3">This is also a way of combining the work between different branches. 
                   Rebasing takes a set of commits, copies them and stores them outside your repository.
-                  The advantage of rebasing is that it can be used to make linear sequence of commits. 
+                  The advantage of rebasing is that it can be used to make a linear sequence of commits. 
                 </p>
               </div>
             </div>
