--- a/index.html
+++ b/index.html
@@ -65,7 +65,7 @@
                 <div class="card-body3">
                   <h5 class="card-title3">You Forgot</h5>
                   <div class="line"></div>
-                  <p class="card-text3">After a while you are trying to remember what that content was that you have found?                      
+                  <p class="card-text3">After a while, you are trying to remember what content was that you have found on the internet previously? 
                     But now you forgot it completely.</p>
                 </div>
               </div>
